feat: add participants panel, video player, and meeting room functionality
- Implemented ParticipantsPanel component to display meeting participants with status indicators.
- Created VideoPlayer component to handle local and remote video streams with background filters.
- Developed VideoCallRoom component to manage meeting state, user interactions, and chat functionality.
- Integrated media permission requests and auto-join logic for seamless user experience.
- Added responsive grid layout for video display based on participant count.
- Included chat message handling and emoji reactions for enhanced interaction during meetings.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "usap-lang-webapp",
+  "name": "meeting-nanaman-lang-webapp",
   "private": true,
   "version": "1.0.0",
   "type": "module",
